--- a/orders-service/pom.xml
+++ b/orders-service/pom.xml
@@ -14,23 +14,13 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>orders-service</name>
 	<description>Orders Service</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
+
 	<properties>
 		<java.version>17</java.version>
-		<spring-cloud.version>2025.0.0</spring-cloud.version>
+		<!-- Cambiar a versión más estable -->
+		<spring-cloud.version>2024.0.0</spring-cloud.version>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -44,15 +34,18 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
+		
+		<!-- Dependencias de Spring Cloud Stream -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-stream</artifactId>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/io.nats/nats-spring-cloud-stream-binder -->
+		
+		<!-- NATS binder - versión más compatible -->
 		<dependency>
 			<groupId>io.nats</groupId>
 			<artifactId>nats-spring-cloud-stream-binder</artifactId>
-			<version>0.6.2+3.5</version>
+			<version>0.6.1+3.1</version>
 		</dependency>
 
 		<dependency>
@@ -82,6 +75,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
