Usa public en lugar de static

--- a/orders-service/config/application.yml
+++ b/orders-service/config/application.yml
@@ -4,6 +4,10 @@ server:
 spring:
   application:
     name: orders-service
+  web:
+    resources:
+      static-locations:
+      - classpath:${user.dir}/public/
 
 # NATS Configuration
 nats:
