--- a/orders-service/config/application.yml
+++ b/orders-service/config/application.yml
@@ -7,7 +7,7 @@ spring:
   web:
     resources:
       static-locations:
-      - classpath:${user.dir}/public/
+      - file:${user.dir}/public/
 
 # NATS Configuration
 nats:
