--- a/products-service/config/application.yml
+++ b/products-service/config/application.yml
@@ -8,6 +8,8 @@ spring:
     resources:
       static-locations:
       - file:${user.dir}/public/
+      - classpath:/static/
+      - classpath:/public/
 
 # NATS Configuration
 nats:
