--- a/notifications-service/config/application-docker.yml
+++ b/notifications-service/config/application-docker.yml
@@ -38,9 +38,9 @@ spring:
     password: 
     driver-class-name: org.h2.Driver
 
-# NATS Configuration para Docker
+# NATS Configuration para Docker (instancia dedicada)
 nats:
-  url: nats://nats-server:4222  # Usar nombre del servicio Docker
+  url: nats://nats-server:4222  # Puerto interno del contenedor (sigue siendo 4222)
   connection:
     timeout: 5000               # Aumentar timeout para Docker
     max-reconnect: 60
