--- a/orders-service/config/application-docker.yml
+++ b/orders-service/config/application-docker.yml
@@ -14,9 +14,9 @@ spring:
       - classpath:/static/
       - classpath:/public/
 
-# NATS Configuration para Docker
+# NATS Configuration para Docker (instancia dedicada)
 nats:
-  url: nats://nats-server:4222  # Usar nombre del servicio Docker
+  url: nats://nats-server:4222  # Puerto interno del contenedor (sigue siendo 4222)
   connection:
     timeout: 5000               # Aumentar timeout para Docker
     max-reconnect: 60
