--- a/docker-compose.vpn.yml
+++ b/docker-compose.vpn.yml
@@ -127,8 +127,8 @@ services:
     image: nginx:1.25-alpine
     container_name: mini-shop-nginx
     ports:
-      - "0.0.0.0:80:80"          # Bind a todas las interfaces
-      - "0.0.0.0:443:443"        # HTTPS
+      - "0.0.0.0:8088:80"        # Puerto externo 8088, interno 80
+      - "0.0.0.0:8443:443"       # Puerto externo 8443, interno 443
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
