--- a/orders-service/config/application.yml
+++ b/orders-service/config/application.yml
@@ -13,7 +13,7 @@ spring:
 
 # NATS Configuration
 nats:
-  url: nats://localhost:4222
+  url: nats://localhost:8422
   connection:
     timeout: 2000
     max-reconnect: 60
@@ -51,4 +51,14 @@ messaging:
       process: "payments.process"
       confirmed: "payments.confirmed"
       failed: "payments.failed"
+
+# Actuator Configuration
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      show-details: always
 
