--- a/notifications-service/config/application.yml
+++ b/notifications-service/config/application.yml
@@ -37,7 +37,7 @@ spring:
 
 # NATS Configuration
 nats:
-  url: nats://localhost:4222
+  url: nats://localhost:8422
   connection:
     timeout: 2000
     max-reconnect: 60
@@ -89,3 +89,12 @@ notification:
       enabled: false
       firebase-key: "your-firebase-key"
 
+# Actuator Configuration
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      show-details: always
