Agrega location faltante

--- a/nginx/conf.d/mini-shop.conf
+++ b/nginx/conf.d/mini-shop.conf
@@ -43,6 +43,11 @@ server {
         include /etc/nginx/proxy_params;
     }
 
+    location /products-app {
+        proxy_pass http://products-backend;
+        include /etc/nginx/proxy_params;
+    }
+
     # Notifications Service
     location /notifications {
         proxy_pass http://notifications-backend;
