--- a/docker-compose.swarm.yml
+++ b/docker-compose.swarm.yml
@@ -70,9 +70,7 @@ services:
   # Orders Service
   # ========================================
   orders-service:
-    build:
-      context: ./orders-service
-      dockerfile: Dockerfile
+    image: mini-shop/orders-service:latest
     ports:
       - "8081:8081"
     environment:
@@ -124,9 +122,7 @@ services:
   # Products Service
   # ========================================
   products-service:
-    build:
-      context: ./products-service
-      dockerfile: Dockerfile
+    image: mini-shop/products-service:latest
     ports:
       - "8082:8082"
     environment:
@@ -174,9 +170,7 @@ services:
   # Notifications Service
   # ========================================
   notifications-service:
-    build:
-      context: ./notifications-service
-      dockerfile: Dockerfile
+    image: mini-shop/notifications-service:latest
     ports:
       - "8083:8083"
     environment:
