Corrige nginx y html

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -12,47 +12,71 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Static files
-    location / {
-        try_files $uri $uri/ /index.html;
+    # Orders Service - prioridad alta
+    location ^~ /orders-app {
+        set $orders_backend "orders-service:8081";
+        # Reescribir la URL para eliminar el prefijo /orders-app
+        rewrite ^/orders-app/?(.*)$ /$1 break;
+        proxy_pass http://$orders_backend;
+        include /etc/nginx/proxy_params;
+        
+        # Headers adicionales para SPA
+        proxy_set_header X-Forwarded-Prefix /orders-app;
+        
+        # Headers anti-cache para desarrollo
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
     }
 
-    # Orders Service
+    # Products Service App
+    location ^~ /products-app {
+        set $products_backend "products-service:8082";
+        rewrite ^/products-app/?(.*)$ /$1 break;
+        proxy_pass http://$products_backend;
+        include /etc/nginx/proxy_params;
+        
+        # Headers adicionales para SPA
+        proxy_set_header X-Forwarded-Prefix /products-app;
+        
+        # Headers anti-cache para desarrollo
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
+    }
+
+    # Notifications Service App
+    location ^~ /notifications-app {
+        set $notifications_backend "notifications-service:8083";
+        rewrite ^/notifications-app/?(.*)$ /$1 break;
+        proxy_pass http://$notifications_backend;
+        include /etc/nginx/proxy_params;
+        
+        # Headers adicionales para SPA
+        proxy_set_header X-Forwarded-Prefix /notifications-app;
+        
+        # Headers anti-cache para desarrollo
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
+    }
+
+    # API Endpoints (sin rewrite)
     location /orders {
         set $orders_backend "orders-service:8081";
         proxy_pass http://$orders_backend;
         include /etc/nginx/proxy_params;
     }
 
-    location /orders-app {
-        set $orders_backend "orders-service:8081";
-        proxy_pass http://$orders_backend/;
-        include /etc/nginx/proxy_params;
-    }
-
-    # Products Service
     location /products {
         set $products_backend "products-service:8082";
         proxy_pass http://$products_backend;
         include /etc/nginx/proxy_params;
     }
 
-    location /products-app {
-        set $products_backend "products-service:8082";
-        proxy_pass http://$products_backend/;
-        include /etc/nginx/proxy_params;
-    }
-
-    # Notifications Service
     location /notifications {
         set $notifications_backend "notifications-service:8083";
         proxy_pass http://$notifications_backend;
-        include /etc/nginx/proxy_params;
-    }
-
-    location /notifications-app {
-        set $notifications_backend "notifications-service:8083";
-        proxy_pass http://$notifications_backend/;
         include /etc/nginx/proxy_params;
     }
 
@@ -85,6 +109,11 @@ server {
         set $notifications_backend "notifications-service:8083";
         proxy_pass http://$notifications_backend/actuator/health;
         include /etc/nginx/proxy_params;
+    }
+
+    # Static files - DEBE IR AL FINAL
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 
     # Error pages
