Corrige rutas de notifications

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,6 +123,7 @@ services:
   # ========================================
   nginx:
     image: nginx:alpine
+    container_name: mini-shop-nginx
     ports:
       - "8088:80"  # Puerto fácil de cambiar
     volumes:
